--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
   --app-background-color: #181a1b;
   --app-home-color: rgb(255, 255, 255);
   --app-default-color: rgb(1, 216, 169);
+  --app-offcanvas-color: #FFF;
   /* --app-footer-color: #212529; */
   --app-footer-color: #212529;
 
