--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,11 +3,11 @@
         <!-- bg-light -->
         <div class="container py-5">
             <div class="row">
-                <div class="col-lg-3 mb-3">
+                <div class="col-lg-3 col-sm-12 mb-3">
                     <ul class="list-unstyled small">
                         <!-- text-muted -->
                         <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/"
-                            aria-label="Bootstrap">
+                            aria-label="Allent Plastik">
                             <img src="assets/logo/allent_logo_without_text.png" height="32"
                                 class="d-inline-block align-text-top me-2">
                             <h3 class=" text-custom">Allent Plastik </h3>
@@ -36,26 +36,26 @@
                     <h3>{{getTranslate("social")}}</h3>
                     <ul class="list-unstyled">
                         <li class="mb-2">
-                            <a class="link-dark link" href="https://www.instagram.com/soruluk_/?hl=tr">
-                                <i class="fa fa-whatsapp" style="font-size: 24px;" aria-hidden="true"></i>
+                            <a class="link-dark link" href="https://wa.me/905425190940">
+                                <i class="fa fa-whatsapp" style="font-size: 21px; min-width: 18px;" aria-hidden="true"></i>
                                 Whatsapp
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a class="link-dark link" href="https://twitter.com/Soruluk1">
-                                <i class="fa fa-instagram" style="font-size: 24px;" aria-hidden="true"></i>
+                            <a class="link-dark link" href="https://www.instagram.com/allentplastik/">
+                                <i class="fa fa-instagram" style="font-size: 21px; min-width: 18px;" aria-hidden="true"></i>
                                 İnstagram
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a class="link-dark link" href="https://www.facebook.com/SorulukToplulugu/">
-                                <i class="fa fa-facebook" style="font-size: 24px;" aria-hidden="true"></i>
+                            <a class="link-dark link" href="#">
+                                <i class="fa fa-facebook" style="font-size: 21px; min-width: 18px;" aria-hidden="true"></i>
                                 Facebook
                             </a>
                         </li>
                         <li class="mb-2">
-                            <a class="link-dark link" href="https://www.instagram.com/soruluk_/?hl=tr">
-                                <i class="fa fa-linkedin" style="font-size: 24px;" aria-hidden="true"></i>
+                            <a class="link-dark link" href="https://www.linkedin.com/company/allent-plastik/">
+                                <i class="fa fa-linkedin" style="font-size: 21px; min-width: 18px;" aria-hidden="true"></i>
                                 Linkedin
                             </a>
                         </li>
