--- a/src/app/components/navi/navi.component.css
+++ b/src/app/components/navi/navi.component.css
@@ -2,6 +2,20 @@
   width: 15%;
 }
 
+.navbar-custom {
+  height: 35px;
+}
+
+@media (max-width: 992px) {
+  .two {
+    top:35px
+  }
+}
+
+.text-custom {
+  color: #09437d;
+}
+
 ul.friend-list {
   margin: 0;
   padding: 0;
@@ -12,12 +26,9 @@ ul.friend-list {
   font-weight: 400;
 }
 
-.text-custom > li > a:hover {
-  color: #09437d; /* original */
-}
-
-.navbar-nav > .active > a {
+.text-custom > li > .active {
   font-weight: 600;
+  color: #09437d;
 }
 
 .fa.fa-whatsapp {
@@ -52,6 +63,14 @@ ul.friend-list {
   );
   background-clip: text;
   -webkit-background-clip: text;
+}
+
+.fa.fa-sm{
+  font-size: 16px;
+}
+
+.fa.fa-lg{
+  font-size: 21px;
 }
 
 /* ul.navbar-nav > li > a{
@@ -113,30 +132,17 @@ ul.friend-list .right h3.sm {
 }
 
 ul.friend-list .right p.sm {
-  font-size: 12px;
+  font-size: 10px;
   color: black;
   margin-bottom: 0;
 }
 
 /* Offcanvas */
 
-@media (max-width: 991.98px) {
-  .offcanvas-collapse {
-    position: fixed;
-    top: 67.5px; 
-    bottom: 0;
-    left: 100%;
-    width: 100%;
-    padding-right: 1rem;
-    padding-left: 1rem;
-    overflow-x: auto;
-    visibility: hidden;
-    background-color: #eeeeee;
-    transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
-  }
-  .offcanvas-collapse.open {
-    visibility: visible;
-    transform: translateX(-50%);
+@media (max-width: 992px) {
+  .offcanvas {
+    width: 250px !important;
+    top: 111px;
+    border-top: solid 2px var(--app-background-color);
   }
 }
-
