--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -1,25 +1,21 @@
 <!-- SM SOCİAL -->
-<nav class="navbar sticky-top navbar-expand navbar-custom navbar-dark bg-dark one d-lg-none" aria-label="Second navbar example">
+<nav class="navbar sticky-top navbar-expand navbar-custom navbar-dark bg-dark one d-lg-none"
+    aria-label="Second navbar example">
     <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
-            aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
 
         <div class="collapse navbar-collapse" id="navbarsExample02">
             <ul class="navbar-nav me-auto">
 
                 <!-- LG LİST -->
                 <li class="nav-item d-none d-lg-block">
-                    <a class="nav-link p-2" href="https://wa.me/905425190940" target="_blank"
-                        rel="noopener">
+                    <a class="nav-link p-2" href="https://wa.me/905425190940" target="_blank" rel="noopener">
                         <i class="fa fa-whatsapp fa-lg" aria-hidden="true"></i>
                     </a>
                 </li>
 
                 <li class="nav-item d-none d-lg-block">
-                    <a class="nav-link p-2" href="https://www.instagram.com/allentplastik/"
-                        target="_blank" rel="noopener">
+                    <a class="nav-link p-2" href="https://www.instagram.com/allentplastik/" target="_blank"
+                        rel="noopener">
                         <i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
                     </a>
                 </li>
@@ -31,23 +27,22 @@
                 </li>
 
                 <li class="nav-item d-none d-lg-block">
-                    <a class="nav-link p-2" href="https://www.linkedin.com/company/allent-plastik/"
-                        target="_blank" rel="noopener">
+                    <a class="nav-link p-2" href="https://www.linkedin.com/company/allent-plastik/" target="_blank"
+                        rel="noopener">
                         <i class="fa fa-linkedin fa-lg" aria-hidden="true"></i>
                     </a>
                 </li>
 
                 <!-- SM LİST -->
                 <li class="nav-item d-lg-none">
-                    <a class="nav-link p-2" href="https://wa.me/905425190940" target="_blank"
-                        rel="noopener">
+                    <a class="nav-link p-2" href="https://wa.me/905425190940" target="_blank" rel="noopener">
                         <i class="fa fa-whatsapp fa-sm" aria-hidden="true"></i>
                     </a>
                 </li>
 
                 <li class="nav-item d-lg-none">
-                    <a class="nav-link p-2" href="https://www.instagram.com/allentplastik/"
-                        target="_blank" rel="noopener">
+                    <a class="nav-link p-2" href="https://www.instagram.com/allentplastik/" target="_blank"
+                        rel="noopener">
                         <i class="fa fa-instagram fa-sm" aria-hidden="true"></i>
                     </a>
                 </li>
@@ -59,12 +54,12 @@
                 </li>
 
                 <li class="nav-item d-lg-none">
-                    <a class="nav-link p-2" href="https://www.linkedin.com/company/allent-plastik/"
-                        target="_blank" rel="noopener">
+                    <a class="nav-link p-2" href="https://www.linkedin.com/company/allent-plastik/" target="_blank"
+                        rel="noopener">
                         <i class="fa fa-linkedin fa-sm" aria-hidden="true"></i>
                     </a>
                 </li>
-                
+
             </ul>
             <div>
                 <ul class="friend-list sm">
@@ -81,30 +76,21 @@
         </div>
     </div>
 </nav>
+<!-- SM SOCİAL END -->
 
 
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-custom bg-white bd-navbar two">
     <div class="container-xl flex-wrap flex-md-nowrap">
+
+        <!-- NAVBAR BRAND -->
         <a class="navbar-brand d-flex align-items-center" routerLink="/">
-            <ul class="list-group list-group-horizontal">
-                <li class="list-group-item p-0" style="border: 0;">
-                    <img src="assets/logo/allent_logo_without_text.png" height="40"
-                        class="d-inline-block align-text-top">
-                </li>
-                <li class="list-group-item d-flex justify-content-between align-items-start d-lg-none p-0"
-                    style="border: 0;">
-                    <div class="ms-2 me-auto g-0" style="font-size: 0.5rem;">
-                        <div style="font-size: 21px;">ALLENT</div>
-                        <label style="font-size: 12px;">Plastik&Kalıp</label>
-                    </div>
-                </li>
-            </ul>
+            <img src="assets/logo/allent_logo_without_text.png" height="40" class="d-inline-block align-text-top">
+            <h4 class="d-lg-none ms-2">Allent Plastik & Kalıp</h4>
         </a>
-        <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
             <span class="navbar-toggler-icon" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"></span>
         </button>
-
-
 
         <!-- LG NAVBAR -->
         <div class="d-none d-lg-block collapse navbar-collapse" id="navbarsExampleDefault">
@@ -221,16 +207,15 @@
         <!-- SM NAVBAR -->
         <div class="offcanvas offcanvas-end" data-bs-backdrop="false" tabindex="-1" id="offcanvasNavbar"
             aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-header">
+            <!-- <div class="offcanvas-header">
                 <h5 class="offcanvas-title text-custom" id="offcanvasNavbarLabel">
                     <strong>{{getTranslate('menu')}}</strong>
                 </h5>
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                     aria-label="Close"></button>
-            </div>
+            </div> -->
             <div class="offcanvas-body">
                 <ul class="navbar-nav flex-wrap bd-navbar-nav pt-2 py-md-0 text-start text-custom">
-                    <!-- flex-row vardı -->
                     <li class="nav-item col-md-auto d-lg-none">
                         <a class="nav-link active" aria-current="page" routerLink="/">
                             {{getTranslate("homePage")}}
@@ -242,7 +227,6 @@
                         </a>
                     </li>
                     <li class="nav-item col-md-auto">
-                        <!-- her birinde col 6 vardı -->
                         <a class="nav-link" aria-current="page" routerLink="/gallery">
                             {{getTranslate("gallery")}}
                         </a>
