--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -71,12 +71,20 @@
                     <h6>{{getTranslate('location')}}</h6>
                 </div>
                 <div class="col-sm">
-                    <agm-map [latitude]="lat" [longitude]="lng">
+                    <!-- <agm-map [latitude]="lat" [longitude]="lng">
                         <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-                    </agm-map>
+                    </agm-map> -->
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50353.32839691586!2d32.48981538618405!3d37.92849081117777!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d091227da65313%3A0xb7ef40a96f2a4a89!2sAllent%20Plastik%20Kal%C4%B1p%20Sanayi%20ve%20Ticaret%20Ltd.%20%C5%9Eti.!5e0!3m2!1str!2str!4v1650657989088!5m2!1str!2str"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade" class="d-none d-lg-block"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50353.32839691586!2d32.48981538618405!3d37.92849081117777!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d091227da65313%3A0xb7ef40a96f2a4a89!2sAllent%20Plastik%20Kal%C4%B1p%20Sanayi%20ve%20Ticaret%20Ltd.%20%C5%9Eti.!5e0!3m2!1str!2str!4v1650657989088!5m2!1str!2str"
+                        width="330" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade" class="d-lg-none"></iframe>
                 </div>
             </div>
-            
+
         </div>
     </div>
 </div>
