--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -41,8 +41,7 @@
                 </li>
 
                 <li class="nav-item d-lg-none">
-                    <a class="nav-link" href="https://www.instagram.com/allentplastik/" target="_blank"
-                        rel="noopener">
+                    <a class="nav-link" href="https://www.instagram.com/allentplastik/" target="_blank" rel="noopener">
                         <i class="fa fa-instagram fa-sm" aria-hidden="true"></i>
                     </a>
                 </li>
@@ -68,7 +67,9 @@
                             <i class="fa fa-phone sm text-white fa-sm"></i>
                         </div>
                         <div class="right">
-                            <p class="text-white sm">+90 542 519 09 40</p>
+                            <a [href]="'tel:+90 542 519 09 40'" class="text-white sm">
+                                +90 542 519 09 40
+                            </a>
                         </div>
                     </li>
                 </ul>
