--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -67,7 +67,7 @@
                             <i class="fa fa-phone sm text-white fa-sm"></i>
                         </div>
                         <div class="right">
-                            <a [href]="'tel:+90 542 519 09 40'" class="text-white sm">
+                            <a href="tel:+90 542 519 09 40" class="text-white sm">
                                 +90 542 519 09 40
                             </a>
                         </div>
